--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=R4_LIB_FOR_MCP2517FD
 version=1.0.0
 author=Satsuki Shinkai
-maintainer=shinkai@shinkai-digital.com
+maintainer=o_satsuki.shinkai@nds-osk.co.jp
 sentence=Library for interfacing MCP2517FD with Arduino Uno R4 Minima
 paragraph=This library enables communication with the MCP2517FD CAN controller using Arduino Uno R4 Minima.
 category=Communication
